# XenoDesign1

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  GPU_TESTS.md  LICENSE  README.md  pyproject.toml
abc_runs/: analyze.py  pilot_a.json  repilot_a_matched.json  scaled_B_12.json  scaled_B_20.json
docker/: README.md  xenodesign.def
docs/: ARCHITECTURE.md  pre-merge-readiness-audit.md
scripts/: README.md  _local_ref.py  _repanel_t20_v2.py  _run_expanded_fit.py  _score_focused_3L35.py  _score_gp41_panels.py  analyze_backend_seq_quality.py  analyze_binder_register.py  analyze_cyclization_calibration.py  analyze_dable_fold.py  analyze_interface_face.py  analyze_trajectories.py  build_9dxx_complex_fastas.py  contrastive_decoys.py  contrastive_rank.py  degame_select.py  design.py  design_alpha.py  design_alpha_beam.py  design_cyclic.py  design_demo.py  design_nonalpha.py  diagnose_drift.py  fit_objective.py  gate_9dxx_restrained.py  gate_mdm2_restrained.py  generate_and_select.py  harvest_alpha.py  interface_specificity_metrics.py  make_benchmark_decoys.py  make_focused_restraints.py  make_pocket_restraints.py  mixed_objective.py  per_term_reliability.py  plot_structure_compliance.py  predict_batch.py  predict_complex.py  predict_target_fold.py  prep_gp41_mdm2_batch.py  rank_designs.py  (+24 more)
tests/: conftest.py  test_abc_calibration.py  test_abc_config.py  test_abc_dispatch.py  test_abc_engine.py  test_abc_fitness.py  test_abc_moves.py  test_abc_variants.py  test_analyze_backend_seq_quality.py  test_anchor_hardening.py  test_beam.py  test_benchmark_cases.py  test_catalog.py  (+87 more)
(+166 files in other folders)
